@@ -191,7 +191,9 @@ struct	idtbl	id_codec[] = {
 	{ CODEC_ID_TIERTEXSEQVIDEO, "CODEC_ID_TIERTEXSEQVIDEO" },
 	{ CODEC_ID_TIFF, "CODEC_ID_TIFF" },
 	{ CODEC_ID_GIF, "CODEC_ID_GIF" },
+#if	LIBAVCODEC_VERSION_MAJOR <= 53
 	{ CODEC_ID_FFH264, "CODEC_ID_FFH264" },
+#endif
 	{ CODEC_ID_DXA, "CODEC_ID_DXA" },
 	{ CODEC_ID_DNXHD, "CODEC_ID_DNXHD" },
 	{ CODEC_ID_THP, "CODEC_ID_THP" },
@@ -387,11 +389,9 @@ struct	idtbl	id_codec_flag[] = {
 	{ CODEC_FLAG_QPEL, "CODEC_FLAG_QPEL" },
 	{ CODEC_FLAG_GMC, "CODEC_FLAG_GMC" },
 	{ CODEC_FLAG_MV0, "CODEC_FLAG_MV0" },
-	{ CODEC_FLAG_PART, "CODEC_FLAG_PART" },
 	{ CODEC_FLAG_INPUT_PRESERVED, "CODEC_FLAG_INPUT_PRESERVED" },
 	{ CODEC_FLAG_PASS1, "CODEC_FLAG_PASS1" },
 	{ CODEC_FLAG_PASS2, "CODEC_FLAG_PASS2" },
-	{ CODEC_FLAG_EXTERN_HUFF, "CODEC_FLAG_EXTERN_HUFF" },
 	{ CODEC_FLAG_GRAY, "CODEC_FLAG_GRAY" },
 	{ CODEC_FLAG_EMU_EDGE, "CODEC_FLAG_EMU_EDGE" },
 	{ CODEC_FLAG_PSNR, "CODEC_FLAG_PSNR" },
@@ -399,24 +399,30 @@ struct	idtbl	id_codec_flag[] = {
 	{ CODEC_FLAG_NORMALIZE_AQP, "CODEC_FLAG_NORMALIZE_AQP" },
 	{ CODEC_FLAG_INTERLACED_DCT, "CODEC_FLAG_INTERLACED_DCT" },
 	{ CODEC_FLAG_LOW_DELAY, "CODEC_FLAG_LOW_DELAY" },
-	{ CODEC_FLAG_ALT_SCAN, "CODEC_FLAG_ALT_SCAN" },
 	{ CODEC_FLAG_GLOBAL_HEADER, "CODEC_FLAG_GLOBAL_HEADER" },
 	{ CODEC_FLAG_BITEXACT, "CODEC_FLAG_BITEXACT" },
 	{ CODEC_FLAG_AC_PRED, "CODEC_FLAG_AC_PRED" },
-	{ CODEC_FLAG_H263P_UMV, "CODEC_FLAG_H263P_UMV" },
 	{ CODEC_FLAG_CBP_RD, "CODEC_FLAG_CBP_RD" },
 	{ CODEC_FLAG_QP_RD, "CODEC_FLAG_QP_RD" },
-	{ CODEC_FLAG_H263P_AIV, "CODEC_FLAG_H263P_AIV" },
-	{ CODEC_FLAG_OBMC, "CODEC_FLAG_OBMC" },
 	{ CODEC_FLAG_LOOP_FILTER, "CODEC_FLAG_LOOP_FILTER" },
-	{ CODEC_FLAG_H263P_SLICE_STRUCT, "CODEC_FLAG_H263P_SLICE_STRUCT" },
 	{ CODEC_FLAG_INTERLACED_ME, "CODEC_FLAG_INTERLACED_ME" },
-	{ CODEC_FLAG_SVCD_SCAN_OFFSET, "CODEC_FLAG_SVCD_SCAN_OFFSET" },
 	{ CODEC_FLAG_CLOSED_GOP, "CODEC_FLAG_CLOSED_GOP" },
 	{ CODEC_FLAG2_FAST, "CODEC_FLAG2_FAST" },
 	{ CODEC_FLAG2_STRICT_GOP, "CODEC_FLAG2_STRICT_GOP" },
 	{ CODEC_FLAG2_NO_OUTPUT, "CODEC_FLAG2_NO_OUTPUT" },
 	{ CODEC_FLAG2_LOCAL_HEADER, "CODEC_FLAG2_LOCAL_HEADER" },
+	{ CODEC_FLAG2_DROP_FRAME_TIMECODE, "CODEC_FLAG2_DROP_FRAME_TIMECODE" },
+	{ CODEC_FLAG2_SKIP_RD, "CODEC_FLAG2_SKIP_RD" },
+	{ CODEC_FLAG2_CHUNKS, "CODEC_FLAG2_CHUNKS" },
+#if	LIBAVCODEC_VERSION_MAJOR <= 53
+	{ CODEC_FLAG_PART, "CODEC_FLAG_PART" },
+	{ CODEC_FLAG_EXTERN_HUFF, "CODEC_FLAG_EXTERN_HUFF" },
+	{ CODEC_FLAG_ALT_SCAN, "CODEC_FLAG_ALT_SCAN" },
+	{ CODEC_FLAG_H263P_UMV, "CODEC_FLAG_H263P_UMV" },
+	{ CODEC_FLAG_H263P_AIV, "CODEC_FLAG_H263P_AIV" },
+	{ CODEC_FLAG_OBMC, "CODEC_FLAG_OBMC" },
+	{ CODEC_FLAG_H263P_SLICE_STRUCT, "CODEC_FLAG_H263P_SLICE_STRUCT" },
+	{ CODEC_FLAG_SVCD_SCAN_OFFSET, "CODEC_FLAG_SVCD_SCAN_OFFSET" },
 	{ CODEC_FLAG2_BPYRAMID, "CODEC_FLAG2_BPYRAMID" },
 	{ CODEC_FLAG2_WPRED, "CODEC_FLAG2_WPRED" },
 	{ CODEC_FLAG2_MIXED_REFS, "CODEC_FLAG2_MIXED_REFS" },
@@ -426,14 +432,12 @@ struct	idtbl	id_codec_flag[] = {
 	{ CODEC_FLAG2_BRDO, "CODEC_FLAG2_BRDO" },
 	{ CODEC_FLAG2_INTRA_VLC, "CODEC_FLAG2_INTRA_VLC" },
 	{ CODEC_FLAG2_MEMC_ONLY, "CODEC_FLAG2_MEMC_ONLY" },
-	{ CODEC_FLAG2_DROP_FRAME_TIMECODE, "CODEC_FLAG2_DROP_FRAME_TIMECODE" },
-	{ CODEC_FLAG2_SKIP_RD, "CODEC_FLAG2_SKIP_RD" },
-	{ CODEC_FLAG2_CHUNKS, "CODEC_FLAG2_CHUNKS" },
 	{ CODEC_FLAG2_NON_LINEAR_QUANT, "CODEC_FLAG2_NON_LINEAR_QUANT" },
 	{ CODEC_FLAG2_BIT_RESERVOIR, "CODEC_FLAG2_BIT_RESERVOIR" },
 	{ CODEC_FLAG2_MBTREE, "CODEC_FLAG2_MBTREE" },
 	{ CODEC_FLAG2_PSY, "CODEC_FLAG2_PSY" },
 	{ CODEC_FLAG2_SSIM, "CODEC_FLAG2_SSIM" },
+#endif
 	{ 0, NULL }
 };
 
@@ -477,14 +481,14 @@ struct	idtbl	id_pict_type[] = {
 };
 #else
 struct	idtbl	id_pict_type[] = {
-	AV_PICTURE_TYPE_NONE, "AV_PICTURE_TYPE_NONE" },
-	AV_PICTURE_TYPE_I, "AV_PICTURE_TYPE_I" },	///< Intra
-	AV_PICTURE_TYPE_P, "AV_PICTURE_TYPE_P" },	///< Predicted
-	AV_PICTURE_TYPE_B, "AV_PICTURE_TYPE_B" },	///< Bi-dir predicted
-	AV_PICTURE_TYPE_S, "AV_PICTURE_TYPE_S" },	///< S(GMC)-VOP MPEG4
-	AV_PICTURE_TYPE_SI, "AV_PICTURE_TYPE_SI" },	///< Switching Intra
-	AV_PICTURE_TYPE_SP, "AV_PICTURE_TYPE_SP" },	///< Switching Predicted
-	AV_PICTURE_TYPE_BI, "AV_PICTURE_TYPE_BI" },	///< BI type
+	{ AV_PICTURE_TYPE_NONE, "AV_PICTURE_TYPE_NONE" },
+	{ AV_PICTURE_TYPE_I, "AV_PICTURE_TYPE_I" },	///< Intra
+	{ AV_PICTURE_TYPE_P, "AV_PICTURE_TYPE_P" },	///< Predicted
+	{ AV_PICTURE_TYPE_B, "AV_PICTURE_TYPE_B" },	///< Bi-dir predicted
+	{ AV_PICTURE_TYPE_S, "AV_PICTURE_TYPE_S" },	///< S(GMC)-VOP MPEG4
+	{ AV_PICTURE_TYPE_SI, "AV_PICTURE_TYPE_SI" },	///< Switching Intra
+	{ AV_PICTURE_TYPE_SP, "AV_PICTURE_TYPE_SP" },	///< Switching Predicted
+	{ AV_PICTURE_TYPE_BI, "AV_PICTURE_TYPE_BI" },	///< BI type
 	{ 0, NULL }
 };
 #endif
@@ -564,27 +568,34 @@ struct	idtbl	id_pix_fmt[] = {
 	{ 0, NULL },
 };
 
-
+#if	LIBAVCODEC_VERSION_MAJOR <= 53
 struct	idtbl	id_sample_format[] = {
 	{ SAMPLE_FMT_NONE, "SAMPLE_FMT_NONE" },
-	{ SAMPLE_FMT_U8, "SAMPLE_FMT_U8" },
-	{ SAMPLE_FMT_S16, "SAMPLE_FMT_S16" },
-	{ SAMPLE_FMT_S32, "SAMPLE_FMT_S32" },
-	{ SAMPLE_FMT_FLT, "SAMPLE_FMT_FLT" },
-	{ SAMPLE_FMT_DBL, "SAMPLE_FMT_DBL" },
+	{ SAMPLE_FMT_U8, "SAMPLE_FMT_U8_8-bit" },
+	{ SAMPLE_FMT_S16, "SAMPLE_FMT_S16_16-bit" },
+	{ SAMPLE_FMT_S32, "SAMPLE_FMT_S32_32-bit" },
+	{ SAMPLE_FMT_FLT, "SAMPLE_FMT_FLT_Float" },
+	{ SAMPLE_FMT_DBL, "SAMPLE_FMT_DBL_Double" },
 	{ SAMPLE_FMT_NB, "SAMPLE_FMT_NB" },
 	{ 0, NULL }
 };
-
-struct	idtbl	id_sam_format[] = {
-	{ SAMPLE_FMT_NONE, "NONE" },
-	{ SAMPLE_FMT_U8, "8-bit" },
-	{ SAMPLE_FMT_S16, "16-bit" },
-	{ SAMPLE_FMT_S32, "32-bit" },
-	{ SAMPLE_FMT_FLT, "Float" },
-	{ SAMPLE_FMT_DBL, "Double" },
-	{ SAMPLE_FMT_NB, "NB" },
+#else
+struct	idtbl	id_sample_format[] = {	/* libavutil/samplefmt.h */
+	{ AV_SAMPLE_FMT_NONE, "AV_SAMPLE_FMT_NONE" },
+	{ AV_SAMPLE_FMT_U8, "AV_SAMPLE_FMT_U8" },	///< unsigned 8 bits
+	{ AV_SAMPLE_FMT_S16, "AV_SAMPLE_FMT_S16" },	///< signed 16 bits
+	{ AV_SAMPLE_FMT_S32, "AV_SAMPLE_FMT_S32" },	///< signed 32 bits
+	{ AV_SAMPLE_FMT_FLT, "AV_SAMPLE_FMT_Float" },	///< float
+	{ AV_SAMPLE_FMT_DBL, "AV_SAMPLE_FMT_Double" },	///< double
+	{ AV_SAMPLE_FMT_U8P, "AV_SAMPLE_FMT_U8P" },	///< u8 bits, planar
+	{ AV_SAMPLE_FMT_S16P, "AV_SAMPLE_FMT_S16P" },	///< s16 bits, planar
+	{ AV_SAMPLE_FMT_S32P, "AV_SAMPLE_FMT_S32P" },	///< s32 bits, planar
+	{ AV_SAMPLE_FMT_FLTP, "AV_SAMPLE_FMT_FLTP" },	///< float, planar
+	{ AV_SAMPLE_FMT_DBLP, "AV_SAMPLE_FMT_DBLP" },	///< double, planar	
+	{ AV_SAMPLE_FMT_NB, "AV_SAMPLE_FMT_NB" },
 	{ 0, NULL }
 };
+#endif
+
 
 
